--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,33 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #2a2c35;
+  gap: 20px;
+}
+
+.wrapperLeft, .wrapperRight {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 600px;
+  height: 500px;
+  border-radius: 10px;
+  border: solid #61dafb 3px;
+}
+
+.buttons-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 90%;
+  padding: 15px 0;
+  border: solid #61dafb 3px;
+  border-radius: 10px;
+  box-sizing: border-box;
 }
 
 .App-logo {
